--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form class = "container">
+		<section id = "heading">
+			<h1>Login Form</h1>
+		</section>
+		
+		<label for = "username">Username</label>
+		<input type = "text" placeholder = "Username" id = "username">
+		<br>
+		<label for = "password">Password</label>
+		<input type = "password" placeholder = "Password" id = "password">
+		<br>
+		<fieldset class = "remember">
+			<input type = "checkbox" id = "checkbox">
+			<label for = "remember">Remember Me</label>
+		</fieldset>
+		<br>
+		<section id = "btns">
+			<button type = "submit" id = "submit" value = "Submit">Submit</button>
+			<br>
+			<button id = "existing">Login as existing user</button>
+		</section>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
