--- a/main.html
+++ b/main.html
@@ -13,19 +13,20 @@
 			<h1>Login Form</h1>
 		</section>
 		
-		<label for = "username">Username</label>
+		<label for = "username">Username:</label>
 		<input type = "text" placeholder = "Username" id = "username">
 		<br>
-		<label for = "password">Password</label>
+		<label for = "password">Password:</label>
 		<input type = "password" placeholder = "Password" id = "password">
 		<br>
 		<fieldset class = "remember">
 			<input type = "checkbox" id = "checkbox">
-			<label for = "remember">Remember Me</label>
+			<label for="checkbox">Remember me.</label>
 		</fieldset>
 		<br>
 		<section id = "btns">
-			<button type = "submit" id = "submit" value = "Submit">Submit</button>
+			<!-- <button type = "submit" id = "submit" value = 'Submit'>Submit</button> -->
+			<input type="submit" id="submit" value="Submit">
 			<br>
 			<button id = "existing">Login as existing user</button>
 		</section>
