--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 		<input type = "password" placeholder = "Password" id = "password">
 		<br>
 		<fieldset class = "remember">
+			<label for="checkbox">Remember me:</label>
 			<input type = "checkbox" id = "checkbox">
-			<label for="checkbox">Remember me.</label>
 		</fieldset>
 		<br>
 		<section id = "btns">
